[Patchset 4] UI: tracks drag & drop + minor fixes
Allows tracks to be reordered by drag&drop, supporting
also D&D between scrolling and pinned containers.
Furthermore bunch of small fixes:
 - reduce the track shell width to 250px, was taking
   too much real estate.
 - fix off-by-one pixel caused by the track bottom
   border. The border was being over-painted by the
   track shell having a bg:white. Now it's a border
   shifted back by 1px, so the track stays at full
   height but the border is always overlaid on top.
- Reduces the font size of the track shell.
- Fixes ui_unittests.


Demo: https://primiano-dot-perfetto-ui.appspot.com

--- a/ui/src/assets/common.scss
+++ b/ui/src/assets/common.scss
@@ -459,11 +459,6 @@ span.code {
     background-color: var(--expanded-background);
     color: white;
     font-weight: bold;
-    .shell {
-      h1 {
-        font-size: 15px;
-      }
-    }
   }
   .shell {
     padding: 0 10px;
